# vis_municipality_votes

./: .gitignore  Cargo.toml  README.md  harvester.toml
.cargo/: config.toml
assets/: map.css
assets/data/: Leipzig.json  Leipzig_cp.json  test.json
src/: harvester.rs  lib.rs  main.rs
src/app/: data.rs  mod.rs
src/harvester/: mod.rs  muni_geo.rs  votes_lpz.rs
src/javascript/: map.js
src/structs/: askama.rs  mod.rs  votes.rs
src/views/: mod.rs
templates/: descriptives.html  main.html  map.html
