[package]
name = "vis_municipality_votes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
csv = "1.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
scraper = "0.19"
tokio = { version = "1.0", features = ["full"] }