[package]
name = "vis_municipality_votes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6"
actix-service = "2.0"
askama = "0.12"
anyhow = "1.0"
csv = "1.3"
geo = "0.28"
geojson = "0.24"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.19"
tokio = { version = "1.0", features = ["full"] }
